# codalpy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  settings.json
codal/: __init__.py  codal.py  cols.py  dicts.py  gen_df.py  http.py  models.py  utils.py
codalpy/: __init__.py  codal.py  gen_df.py  models.py
codalpy/utils/: cols.py  dicts.py  gen_df.py  models.py  utils.py
docs/: conf.py  index.html  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/autoapi/: index.doctree
docs/_build/.doctrees/autoapi/codalpy/: index.doctree
docs/_build/.doctrees/autoapi/codalpy/codal/: index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/codalpy/: codal.html
docs/_build/_sources/autoapi/: index.rst.txt
docs/_build/_sources/autoapi/codalpy/: index.rst.txt
docs/_build/_sources/autoapi/codalpy/codal/: index.rst.txt
docs/_build/autoapi/: index.html
docs/_build/autoapi/codalpy/: index.html
docs/_build/autoapi/codalpy/codal/: index.html
examples/: income_statement.py
