[tool.poetry]
name = "codalpy"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jdatetime = "^5.0.0"
polars = "^1.4.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
root="valpy"
venvPath = "."
venv = ".venv"
